# countfoldertokens

./: README.md  pyproject.toml
countfoldertokens/: __init__.py  counttokens.py  main.py
