[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["countfoldertokens"]

[project]
name = "countfoldertokens"
version = "0.1.0"
dependencies = [
  "tiktoken",
  "tqdm"
]

[project.scripts]
countfoldertokens = "countfoldertokens:main"
