[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "countfoldertokens"
version = "0.1.1"
dependencies = [
  "tiktoken",
  "tqdm",
  "GitPython"
]

[project.scripts]
countfoldertokens = "countfoldertokens:main"
counttokens = "countfoldertokens.counttokens:main"
